<resources>

    <string name="app_name">Im Marvel Hero</string>
    <string name="here_must_be_image">HERE MUST BE IMAGE</string>
    <string name="im_iron_man">Im Iron Man</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="standard_bio">"The avenger is busy with heroic deeds and has not yet written anything"</string>
    <string name="rating">" Rating"</string>
    <string name="try_again">Try again</string>
    <string name="standard_stories_review">173 stories | 120 Review</string>
    <string name="standard_rating">4.5 Rating</string>
    <string name="standard_by_who">By George Kim</string>
    <string name="description">Description</string>
    <string name="standard_bio_text">Hi!)))</string>

</resources>